# backend/internal/infrastructure/db/postgres/catalog_mapper.go
@@ -1,0 +1,16 @@
+package postgres
+
+import (
+	"bitnix-backend/internal/domain/entities"
+
+	"github.com/Rhymond/go-money"
+)
+
+func fromDbCatalogItem(item *CatalogItem) *entities.CatalogItem {
+	return &entities.CatalogItem{
+		GameID:    item.GameID,
+		Title:     item.Title,
+		Price:     *money.NewFromFloat(item.Price, "USD"),
+		Thumbnail: item.Thumbnail,
+	}
+}
