# backend/internal/interface/api/rest/dto/mapper/list_items_response_mapper.go
@@ -1,0 +1,22 @@
+package mapper
+
+import (
+	"bitnix-backend/internal/application/common"
+	"bitnix-backend/internal/interface/api/rest/dto/response"
+)
+
+func ToListItemsResponse(items []*common.CatalogResult) *response.ListItemsResponse {
+	var itemsResponse []response.ItemsResponse
+
+	for _, item := range items {
+		itemsResponse = append(itemsResponse, response.ItemsResponse{
+			ID:        item.GameID.String(),
+			Title:     item.Title,
+			Price:     item.Price.AsMajorUnits(),
+			Thumbnail: item.Thumbnail,
+		})
+	}
+	return &response.ListItemsResponse{
+		Items: itemsResponse,
+	}
+}
